compiler/tests/compiler/must_fail/t_11.mil
fn foo() {
  x : stack u64;
  x : stack u64; 
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/

